<resources>
    <string name="app_name">Negociacao Bezerros</string>
    <string name="acao_compartilhar">Compartilhar</string>
    <string name="acao_concluir">Concluir</string>
    <string name="acao_confirmar">Confirmar</string>
    <string name="acao_conectar">Conectar ao servidor</string>
    <string name="acao_exportar_pdf">Exportar PDF</string>
    <string name="acao_finalizar_negociacao">Finalizar negociação</string>
    <string name="acao_finalizar_simulacao">Finalizar simulação frete</string>
    <string name="acao_proximo">Próximo</string>
    <string name="acao_salvar">Salvar agora</string>
    <string name="acao_sincronizar">Sincronizar agora</string>
    <string name="acao_voltar">Voltar</string>
    <string name="cd_fechar">Fechar</string>
    <string name="cd_icon_frete">Ícone campo frete</string>
    <string name="cd_icon_por_cabeca">Ícone campo por cabeça</string>
    <string name="cd_icon_por_kg">Ícone campo por kg</string>
    <string name="cd_mais_opcoes">Mais opções</string>
    <string name="cd_sucesso">Negociação concluída com sucesso</string>
    <string name="cd_toolbar">Barra de navegação</string>
    <string name="cd_voltar">Voltar</string>
    <string name="aviso_informe_frete_antes_corretor">Informe o frete antes de adicionar um corretor</string>
    <string name="aviso_preencha_campos_obrigatorios">Preencha todos os campos obrigatórios</string>
    <string name="aviso_selecione_categoria_frete">Selecione a categoria do animal antes de simular o frete</string>
    <string name="dialogo_botao_negativo">Não</string>
    <string name="dialogo_botao_positivo">Ok</string>
    <string name="dialogo_mensagem_alteracoes_nao_salvas">Há alterações não salvas. Deseja continuar?</string>
    <string name="dialogo_mensagem_excluir">Deseja realmente excluir este item?</string>
    <string name="dialogo_mensagem_permissao_localizacao">Para usar este recurso, você precisa permitir o acesso à localização nas configurações do aplicativo.</string>
    <string name="dialogo_titulo_confirmar">Confirmar ação</string>
    <string name="dialogo_titulo_excluir">Excluir item</string>
    <string name="dialogo_titulo_permissao_localizacao">Permissão de localização necessária</string>
    <string name="common_dica_peso">Peso</string>
    <string name="dica_campo_idade">Idade</string>
    <string name="dica_distancia_km">Distância em km</string>
    <string name="dica_helper_campo_idade">Informe a idade em meses</string>
    <string name="dica_pesquisar_endereco">Pesquisar endereço</string>
    <string name="dica_quantidade_cabecas">Nº animais</string>
    <string name="dica_toque_escolher">Toque para escolher</string>
    <string name="dica_valor_frete">Valor do Frete</string>
    <string name="dica_valor_por_cabeca">Valor/Cab</string>
    <string name="dica_valor_por_kg">Valor/Kg</string>
    <string name="erro_busca_endereco">Erro ao buscar endereço. Verifique sua conexão.</string>
    <string name="erro_chave_api_ausente">Erro ao fazer a requisição para calcular rota</string>
    <string name="sucesso_negociacao_finalizada">Negociação finalizada com sucesso</string>
    <string name="validacao_categoria_obrigatoria">Selecione a categoria do animal</string>
    <string name="validacao_corretor_obrigatorio">Selecione um corretor</string>
    <string name="validacao_empresa_obrigatoria">Selecione uma empresa para continuar</string>
    <string name="validacao_frete_obrigatorio">Simule o frete ou informe o valor manualmente</string>
    <string name="validacao_idade_obrigatoria">Informe a idade do animal</string>
    <string name="validacao_raca_obrigatoria">Selecione a raça do animal</string>
    <string name="validacao_sexo_obrigatorio">Selecione o sexo do animal</string>
    <string name="formato_capacidade_cabecas">Capacidade: %1$d cabeças</string>
    <string name="formato_numero_percentual"> %1$d%%</string>
    <string name="formato_percentual">%1$s%%</string>
    <string name="common_label_empresa_compradora">Empresa compradora</string>
    <string name="common_placeholder_decimal">0,00</string>
    <string name="common_placeholder_percentual">0,00%</string>
    <string name="common_placeholder_texto">%s</string>
    <string name="common_valor_monetario_zero">R$ 0,00</string>
    <string name="placeholder_badge_diferenca">+R$ %s</string>
    <string name="placeholder_badge_diferenca_default">+R$ 0,00</string>
    <string name="placeholder_company_location">Ribeirão Preto, SP</string>
    <string name="placeholder_company_name">Frigorífico Boi Dourado</string>
    <string name="placeholder_comprador_nome">Bom sucesso</string>
    <string name="placeholder_valor_com_moeda">R$ %s</string>
    <string name="placeholder_valor_por_kg">R$ %s /kg</string>
    <string name="placeholder_valor_por_kg_default">R$ 0,00 /kg</string>
    <string name="placeholder_valor_quantidade">0</string>
    <string name="placeholder_variacao">--%</string>
    <string name="prefixo_moeda">R$</string>
    <string name="sufixo_cabecas">/cab</string>
    <string name="sufixo_kg">/kg</string>
    <string name="unidade_kg">kg</string>
    <string name="unidade_km">km</string>
    <string name="package_chave_api_google_maps">com.google.android.geo.API_KEY</string>
    <string name="url_acesso_gespec">http://%1$s:%2$s/gespec/gespecservices/AcessoService/obtem/%3$s</string>
    <string name="url_directions">https://routes.googleapis.com/directions/v2:computeRoutes</string>
    <string name="url_negociacao_gespec">http://%1$s:%2$s/gespec/gespecservices/NegGadoService/</string>
    <string name="url_usuario_gespec">http://%1$s:%2$s/gespec/gespecservices/UsuarioService/obtem/%3$s/%4$s/%5$s</string>
    <plurals name="plural_quantidade_veiculos">
        <item quantity="one">%1$d veículo</item>
        <item quantity="other">%1$d veículos</item>
    </plurals>
    <string name="home_desc_selecionar_empresa">Toque para escolher a empresa</string>
    <string name="home_empresa_selecionar_label">Selecionar empresa</string>
    <string name="home_categoria_selecionar_label">Selecionar categoria</string>
    <string name="home_label_historico_recente">Histórico recente</string>
    <string name="home_msg_aviso">A empresa pode ser alterada a qualquer momento antes de finalizar</string>
    <string name="home_title_selecionar_empresa">Nova Negociação</string>
    <string name="amostra_opcao_categoria">Categoria</string>
    <string name="cotacao_chip_femea">Fêmea</string>
    <string name="cotacao_chip_macho">Macho</string>
    <string name="cotacao_hint_quantidade">Quantidade</string>
    <string name="cotacao_label_arroba">Arroba</string>
    <string name="cotacao_label_medidas_lote">Medidas do lote</string>
    <string name="cotacao_label_sexo">Sexo</string>
    <string name="cotacao_msg_aviso">A cotação é apenas uma etapa preliminar da negociação.</string>
    <string name="cotacao_tabela_cabeca_label">Por cabeça</string>
    <string name="cotacao_tabela_helper_informe_peso">Informe o peso médio</string>
    <string name="cotacao_tabela_quilo_label">Por quilo</string>
    <string name="cotacao_tabela_total_label">Valor total</string>
    <string name="ncotacao_title">Nova cotação</string>
    <string name="negociacao_title">Nova negociação</string>
    <string name="negociacao_title_variacao">Variação sobre a cotação</string>
    <string name="negociacao_title_item">Negociação</string>
    <string name="negociacao_resumo_valor_cotado_label">Valores cotados (referência)</string>
    <string name="negociacao_hint_por_kg">Valor quilo</string>
    <string name="negociacao_hint_por_cabeca">Valor cabeça</string>
    <string name="negociacao_hint_valor_frete">Valor do frete</string>
    <string name="negociacao_label_dados">Dados da Negociação</string>
    <string name="negociacao_label_simular_frete">Simular um frete</string>
    <string name="negociacao_descricao_simular_frete">Defina origem, destino e veículo</string>
    <string name="negociacao_cd_card_simular_frete">Simular um frete. Calcule o custo do transporte por km, cabeça ou valor fixo. Toque para abrir.</string>
    <string name="negociacao_label_sem_corretor">Sem corretor</string>
    <string name="negociacao_descricao_selecionar_corretor">Vincule um corretor a esta negociação</string>
    <string name="negociacao_cd_card_corretor">Sem corretor. Sem comissão aplicada. Toque para alterar.</string>
    <string name="negociacao_label_composicao_valor">Composição do valor</string>
    <string name="negociacao_label_proposta">Proposta</string>
    <string name="negociacao_rotulo_etapa_pedido">VALOR DO PEDIDO / PROPOSTO</string>
    <string name="negociacao_rotulo_etapa_final">VALOR DE FECHAMENTO</string>
    <string name="acao_finalizar">Finalizar negociação</string>
    <string name="negociacao_animal_card_descricao_sexo">Macho</string>
    <string name="negociacao_animal_card_title">Preço negociado</string>
    <string name="negociacao_animal_card_unit_one">R$</string>
    <string name="negociacao_animal_card_unit_two">/kg</string>
    <string name="negociacao_animal_helper_text_peso">Informe o peso e adicione</string>
    <string name="negociacao_animal_resumo_cab_label">Total cab.</string>
    <string name="negociacao_animal_resumo_kg_label">Total kg</string>
    <string name="negociacao_animal_resumo_label_por_cab">/cab.</string>
    <string name="negociacao_animal_resumo_label_por_kg">/kg</string>
    <string name="negociacao_animal_resumo_peso_medio_label">Peso médio</string>
    <string name="negociacao_animal_resumo_valor_total_label">Valor total</string>
    <string name="negociacao_animal_title">Pesagem do lote</string>
    <string name="negociacao_animal_pesados_label">Animais pesados</string>
    <string name="item_negociacao_animal_example_desc">R$ %1$s . R$ %2$s</string>
    <string name="negociacao_animal_progresso_pesados_default">0 de 0 pesados</string>
    <string name="negociacao_animal_progresso_percentual_default">0%</string>
    <string name="negociacao_animal_progresso_faltam_default">Faltam 0 animais</string>
    <string name="negociacao_animal_progresso_pesados">%1$d de %2$d pesados</string>
    <string name="negociacao_animal_progresso_percentual">%1$d%%</string>
    <string name="negociacao_animal_progresso_faltam">Faltam %1$d animais</string>
    <string name="edicao_item_negociacao_animal_titulo">Editar peso</string>
    <string name="frete_descricao_preenchido">Frete R$ %1$s · R$ %2$s</string>
    <string name="frete_card_title_selecao_categoria_animal">Categoria do Animal</string>
    <string name="frete_card__descricao_selecao_categoria_animal">Selecione a categoria</string>
    <string name="frete_descricao_preenchido_default">Frete R$ 0,00 · R$ 0,00</string>
    <string name="frete_descricao_selecione_origem">Selecione origem</string>
    <string name="frete_descricao_vazio">Defina origem, destino e veículo</string>
    <string name="frete_destino_padrao">Cuiabá</string>
    <string name="frete_divisor_ou">OU</string>
    <string name="frete_helper">Valor do frete: R$ %s/kg</string>
    <string name="frete_helper_default">Valor do frete: R$ 0,00/kg</string>
    <string name="frete_instrucao_titulo">Preencha os campos abaixo</string>
    <string name="frete_resumo_titulo">Resultados</string>
    <string name="conexao_desc_conectar">Conectar para sincronizar</string>
    <string name="conexao_desc_rodape">Sincronização com o servidor remoto</string>
    <string name="conexao_hint_ip">Endereço IP</string>
    <string name="conexao_hint_porta">Porta</string>
    <string name="conexao_hint_site">Site</string>
    <string name="conexao_hint_usuario">Usuário</string>
    <string name="conexao_label_credenciais">Credenciais</string>
    <string name="conexao_label_servidor">Servidor</string>
    <string name="conexao_title">Conexão remota</string>
    <string name="conexao_titulo_estabelecer">Estabelecer conexão</string>
    <string name="tools_item_transporte_tipo">Nome do transporte</string>
</resources>