<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_lg">

    <TextView
        android:id="@+id/text_view_edicao_item_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edicao_item_negociacao_animal_titulo"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_edicao_item_peso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_md"
        android:hint="@string/common_dica_peso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_edicao_item_titulo"
        app:shapeAppearance="?attr/shapeAppearanceCornerSmall"
        app:startIconDrawable="@drawable/sync_alt_24px">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_edicao_item_peso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_edicao_item_confirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_lg"
        android:paddingVertical="@dimen/spacing_lg"
        android:text="@string/acao_confirmar"
        app:icon="@drawable/check_24px"
        app:iconGravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_input_layout_edicao_item_peso" />

</androidx.constraintlayout.widget.ConstraintLayout>
