<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/constraint_layout_conexao_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/spacing_xs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/constraint_layout_conexao_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:contentDescription="@string/cd_toolbar"
            app:menu="@menu/menu_conexao"
            app:navigationContentDescription="@string/cd_voltar"
            app:navigationIcon="@drawable/arrow_back_24px"
            app:title="@string/conexao_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/constraint_layout_conexao_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/button_conexao_proximo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_layout_conexao_appbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_md">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_view_conexao_cabecalho"
                style="?attr/materialCardViewFilledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="?attr/colorSurfaceContainerLow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearance="?attr/shapeAppearanceCornerExtraExtraLarge">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_md">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/card_view_conexao_icone"
                        style="?attr/materialCardViewFilledStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="?attr/colorSurfaceContainer"
                        app:contentPadding="@dimen/spacing_md"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:shapeAppearance="?attr/shapeAppearanceCornerExtraExtraLarge">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:importantForAccessibility="no"
                            android:src="@drawable/flowchart_24px" />

                    </com.google.android.material.card.MaterialCardView>

                    <LinearLayout
                        android:id="@+id/container_conexao_textos"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_md"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="@id/card_view_conexao_icone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/card_view_conexao_icone"
                        app:layout_constraintTop_toTopOf="@id/card_view_conexao_icone">

                        <TextView
                            android:id="@+id/text_view_conexao_titulo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/conexao_titulo_estabelecer"
                            android:textAppearance="?attr/textAppearanceTitleSmall" />

                        <TextView
                            android:id="@+id/text_view_conexao_descricao"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/conexao_desc_conectar"
                            android:textAppearance="?attr/textAppearanceBodySmall" />

                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/text_view_conexao_label_servidor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_lg"
                android:text="@string/conexao_label_servidor"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?attr/colorOnSurfaceVariant"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view_conexao_cabecalho" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_conexao_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:hint="@string/conexao_hint_site"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_conexao_label_servidor"
                app:shapeAppearance="?attr/shapeAppearanceCornerSmall"
                app:startIconDrawable="@drawable/language_24px">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_conexao_site"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_conexao_ip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:layout_marginEnd="@dimen/spacing_xs"
                android:hint="@string/conexao_hint_ip"
                app:layout_constraintEnd_toStartOf="@id/text_input_layout_conexao_porta"
                app:layout_constraintHorizontal_weight="7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_conexao_site"
                app:shapeAppearance="?attr/shapeAppearanceCornerSmall"
                app:startIconDrawable="@drawable/dns_24px">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_conexao_ip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789."
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_conexao_porta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:hint="@string/conexao_hint_porta"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="4"
                app:layout_constraintStart_toEndOf="@id/text_input_layout_conexao_ip"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_conexao_site"
                app:shapeAppearance="?attr/shapeAppearanceCornerSmall"
                app:startIconDrawable="@drawable/settings_ethernet_24px">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_conexao_porta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_view_conexao_label_credenciais"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_lg"
                android:text="@string/conexao_label_credenciais"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?attr/colorOnSurfaceVariant"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_conexao_porta" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_conexao_usuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_sm"
                android:hint="@string/conexao_hint_usuario"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_conexao_label_credenciais"
                app:shapeAppearance="?attr/shapeAppearanceCornerSmall"
                app:startIconDrawable="@drawable/person_24px">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_conexao_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout_conexao_rodape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_lg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_conexao_usuario">

                <ImageView
                    android:id="@+id/image_view_conexao_icone_rodape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/lock_24px"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="?attr/colorOnSurfaceVariant" />

                <TextView
                    android:id="@+id/text_view_conexao_rodape"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_xs"
                    android:text="@string/conexao_desc_rodape"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?attr/colorOnSurfaceVariant"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/image_view_conexao_icone_rodape"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/button_conexao_proximo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_md"
        android:layout_marginBottom="@dimen/spacing_md"
        android:paddingVertical="@dimen/spacing_lg"
        android:text="@string/acao_conectar"
        app:icon="@drawable/cable_24px"
        app:iconGravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>